--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lodash.template": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "remove-accents": "^0.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
