--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "react-neighborhood-map",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-map-react": "^1.1.4",
-    "lodash": "^4.17.15",
-    "lodash.template": "^4.5.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1",
-    "remove-accents": "^0.4.2"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
