chore: upgrade google-map-react and react-scripts packages

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-map-react": "^1.1.4",
+    "google-map-react": "2.0.4",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.1",
     "remove-accents": "^0.4.2"
   },
   "scripts": {
